--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -1,9 +1,9 @@
 name: "Publish"
 on:
-  # Run only when pushing to master branch
+  # Run only when pushing to main branch
   push:
     branches:
-      - master
+      - main
 jobs:
   neuron:
     runs-on: ubuntu-latest
